[package]
name = "mayheap"
version = "0.2.0"
description = "An abtraction over alloc & heapless"
repository = "https://github.com/zeenix/mayheap"
edition = "2021"
rust-version = "1.81"
license = "MIT"

[features]
default = ["alloc"]
alloc = ["serde?/alloc"]
heapless = ["dep:heapless"]
serde = ["dep:serde", "heapless?/serde"]

[dependencies]
heapless = { version = "0.8", optional = true }
serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
serde_json = "1"
