[package]
name = "mayheap"
version = "0.2.0"
description = "An abtraction over alloc & heapless"
repository = "https://github.com/zeenix/mayheap"
edition = "2021"
rust-version = "1.81"
license = "MIT"

[features]
default = ["alloc"]
alloc = ["serde?/alloc"]
heapless = ["dep:heapless"]
serde = ["dep:serde", "heapless?/serde"]
portable-atomic = ["dep:portable-atomic", "heapless?/portable-atomic"]

[dependencies]
heapless = { git = "https://github.com/zeenix/heapless", rev = "4d9a1d35", optional = true }
serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }
portable-atomic = { version = "1", optional = true }
paste = "1.0"

[dev-dependencies]
serde_json = "1"
